added tests into UserControllerTest